--- a/index.ipynb
+++ b/index.ipynb
@@ -42,18 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "number_50 = 50\n",
-    "less_than_50 = None\n",
+    "less_than_50 = []\n",
     "if number_50 > 100:\n",
+    "    less_than_50==100\n",
     "    # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
     "elif number_50 < 50:\n",
+    "    less_than_50==50\n",
     "    # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
     "else:\n",
-    "    # else assign the `less_than_50` variable to 49"
+    "    less_than_50==49\n",
+    "    # else assign the `less_than_50` variable to 49\n",
+    "print(less_than_50)\n"
    ]
   },
   {
@@ -65,12 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "temperature = 85\n",
-    "is_it_hot = None\n",
+    "is_it_hot = []\n",
+    "if temperature>80:\n",
+    "    is_it_hot=\"It is so hot out!\"\n",
+    "else:\n",
+    "    is_it_hot=\"This is nothing! Bring on the heat.\"\n",
     "# conditionals go here"
    ]
   },
@@ -84,13 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "today_is = 4\n",
-    "day_of_the_week = None\n",
-    "# conditionals go here"
+    "day_of_the_week = \"Wednesday\"\n",
+    "if today_is == 1:\n",
+    "    day_of_the_week = 'Sunday'\n",
+    "elif today_is == 2:\n",
+    "    day_of_the_week = 'Monday'\n",
+    "elif today_is == 3:\n",
+    "    day_of_the_week = 'Tuesday'\n",
+    "elif today_is == 5:\n",
+    "    day_of_the_week = 'Thursday'\n",
+    "elif today_is == 6:\n",
+    "    day_of_the_week = 'Friday' \n",
+    "else:\n",
+    "    day_of_the_week = 'Saturday'\n",
+    "    \n",
+    "    # conditionals go here"
    ]
   },
   {
@@ -102,13 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
+    "if string.endswith(\"cool\"):\n",
+    "    ends_with = False\n",
+    "else:\n",
+    "    ends_with = True\n",
+    "    \n",
     "# conditionals go here"
    ]
   },
@@ -143,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
